--- a/Clock/clock.css
+++ b/Clock/clock.css
@@ -5,19 +5,21 @@ body{
     width: 100vw;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
 }
 
+
+
 .clock{
-    width: 25vw;
-    height: 25vw;
+    width: 30vw;
+    height: 30vw;
     display: flex;
     justify-content: center;
     align-items: center;
     background:url("images/clock.png");
     background-color: #fff;
     background-size: cover;
-    border-radius: 50%;
+    border-radius: 50rem;
     padding: 1.2rem;
     box-shadow:inset 0 0 1.2rem rgba(0,0,0,0.2),
                0 0 0 1.2rem #fff;
@@ -30,10 +32,9 @@ body{
     width: 1rem;
     height: 1rem;
     background-color: rgba(0,0,0);
-    border-radius: 50%;
+    border-radius: 50rem;
     z-index: 10;
 }
-
 #hour,#min,#sec{
     position: absolute;
     bottom: 50%;
@@ -65,16 +66,35 @@ body{
 
 
 
-@media screen and (max-width:768px){
+
+@media screen and (max-width:860px){
     .clock{
-        width: 70vw;
-        height: 70vw;
+        width: 50vw;
+        height: 50vw;
+    }
+    #hour{
+      height: 6.5rem;
     }   
+    #min{
+      height: 7.9rem;
+    }
+    #sec{
+       height: 8.9rem;
+    }
 }
 
 @media screen and (max-width:576px){
     .clock{
-        width: 60vw;
-        height: 60vw;
+        width: 70vw;
+        height: 70vw;
     }   
+    #hour{
+        height: 5rem;
+      }   
+      #min{
+        height: 6.3rem;
+      }
+      #sec{
+         height: 6.9rem;
+      }
 }
